<resources>
    <string name="app_name">G-Carpfishing</string>
    <string name="action_settings">Settings</string>

    <string name="url_backend">http://89.17.51.75:4089/carpfishing_test/hs/v1</string>

    <string name="auth">Авторизация</string>
    <string name="auth_button">Вход</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="fill_login_password">Заполните логин и пароль</string>
    <string name="tournament">ТУРНИР</string>
    <string name="exchange">Обмен</string>
    <string name="register_team">Регистрация команд</string>
    <string name="draw_queue">Жеребьевка очереди</string>
    <string name="draw_sector">Жеребьевка секторов</string>
    <string name="weighing">Взвешивание</string>
    <string name="settings_rods">Настройка удочек</string>
    <string name="online_protocol">Online протокол</string>
    <string name="statistics">Статистика</string>
    <string name="sector">Сектор</string>
    <string name="count">Кол-во</string>
    <string name="weigh_big">Вес</string>
    <string name="avr">Вес средний</string>
    <string name="sum">Общий</string>
    <string name="result">Итого</string>
    <string name="number">№ п/п</string>
    <string name="teams">Команды</string>
    <string name="name">Название</string>
    <string name="end_reg">Завершить регистрацию</string>
    <string name="open_reg">Открыть регистрацию</string>
    <string name="confirm_reg">Подвтердить регистрацию</string>
    <string name="unconfirm_reg">Отменить регистрацию</string>
    <string name="end_reg_match_question">Вы уверены, что хотите завершить регистрацию турнира?</string>
    <string name="open_reg_match_question">Вы уверены, что хотите открыть регистрацию турнира?</string>
    <string name="end_reg_team_question">Подтвердить регистрацию?</string>
    <string name="open_reg_team_question">Отменить регистрацию?</string>
    <string name="end_reg_match">Регистрация турнира успешно завершена</string>
    <string name="open_reg_match">Регистрация турнира успешно открыта</string>
    <string name="end_reg_team">Регистрация команды успешно завершена</string>
    <string name="reg_status_updated">Статус регистрации обновлен</string>
    <string name="open_reg_team">Регистрация команды успешно отменена</string>
    <string name="end_draw">Завершить жеребьевку</string>
    <string name="open_draw">Открыть жеребьевку</string>
    <string name="fish_count">Количество рыбы</string>
    <string name="voilations">Замечание</string>
    <string name="queue">Очередь</string>
    <string name="enter_queue">Ведите номер очереди</string>
    <string name="enter_sector">Ведите номер сектора</string>
    <string name="queue_empty">Остались команды без номера очереди</string>
    <string name="sector_empty">Остались команды без номера сектора</string>
    <string name="queue_zero">Номер очереди должен быть больше 0</string>
    <string name="sector_zero">Номер сектора должен быть больше 0</string>
    <string name="queue_unic">Номер очереди должен быть уникален</string>
    <string name="sector_unic">Номер сектора должен быть уникален</string>
    <string name="queue_draw_end">Жеребьевка очереди завершена</string>
    <string name="sector_draw_end">Жеребьевка секторов завершена</string>
    <string name="queue_draw_open">Жеребьевка очереди открыта</string>
    <string name="sector_draw_open">Жеребьевка секторов открыта</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="request_error">Во время выполнения запроса возникла ошибка, проверьте подключение к интернету</string>
    <string name="login_error">Ошибка авторизации! Не найден пользователь с указанными логином и паролем</string>
    <string name="error">Ошибка! </string>
    <string name="end_weighting">Завершить взвешивание</string>
    <string name="fishes">Рыба</string>
    <string name="violations">Нарушения</string>
    <string name="time">Время</string>
    <string name="stage">Этап</string>
    <string name="weighting_stages">Этапы взвешивания</string>
    <string name="weighting_confirm">Подтвердите взвешивание</string>
    <string name="violation_confirm">Подтвердите нарушение</string>
    <string name="stage_end">Завершен</string>
    <string name="stage_continue">Открыт</string>
    <string name="status">Статус</string>
    <string name="input_weight">Введите вес</string>
    <string name="input_new_time">Введите новое время</string>
    <string name="select_fish_type">Выберите тип рыбы</string>
    <string name="select_violation_type">Выберите вид нарушения</string>
    <string name="pin_code">ПИН-КОД</string>
    <string name="end_weighting_question">Вы уверены, что хотите завершить этап взвешивания?</string>
    <string name="end_weighting_success">Этап взвешивания завершен</string>
    <string name="sms">Вам придет SMS с кодом</string>
    <string name="ending">Завершение</string>
    <string name="violation_type">Тип нарушения</string>
    <string name="confirm">Подтвердить</string>
    <string name="protocol_sent">Протоколы отправлены</string>
    <string name="sanction">Мера</string>
    <string name="warning">Предупреждение</string>
    <string name="disqualification">Дисквалификация</string>
    <string name="wrong_pin">Неверный пин-код</string>
    <string name="fill_weight">Введите вес</string>
    <string-array name="rods_params">
        <item>Расстояние</item>
        <item>Глубина</item>
        <item>Насадка</item>
        <item>Удочка</item>
        <item>Катушка</item>
        <item>Леска</item>
        <item>Монтаж</item>
        <item>Проводок</item>
        <item>Тип дна</item>
        <item>Пресс</item>
        <item>Ориентир</item>
        <item>Время</item>
    </string-array>

    <string name="values">Значения</string>
    <string name="draw_confirm">Подтвердите отправку данных</string>
    <string name="register_rods">Регистрация удочек</string>
    <string name="date">Дата</string>
    <string name="weight">Вес</string>
    <string name="foul">Нарушение</string>
    <string name="sector_map">Карта сектора</string>
    <string name="settings_rods_work">Настройка рабочих удилищ</string>
    <string name="settings_rods_spod">Настройка сподовых удилищ</string>
    <string name="settings_work">Настройка рабочего удилища</string>
    <string name="settings_spod">Настройка сподового удилища</string>
    <string name="protocol">Протокол</string>
    <string name="team_stats">Статистика команды</string>
    <string name="change_pin">Сменить пин</string>
    <string-array name="register_status">
        <item>Зарегистрирована</item>
        <item>Не зарегистрирована</item>
        <item>Отказано в регистрации</item>
    </string-array>
    <string-array name="rods_nums">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="width">Ширина</string>
    <string name="fishing_record">Учет ловли</string>
    <string name="record_set_rod">Заброс</string>
    <string name="record_bite">Поклевка</string>
    <string name="record_fish">Рыба</string>
    <string name="record_gone">Сход</string>
    <string name="addinfo_hint">Введите своё значение</string>
    <string name="distance">Дальность</string>

</resources>