<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StatisticsFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/dark_gradient" />

    <TextView
        android:id="@+id/tv_tournament_name"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/button_bottom_gradient"
        android:fontFamily="@font/regular_md"
        android:gravity="center"
        android:text="@string/tournament"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/ll_stat_date"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="96dp"
        android:layout_below="@id/tv_tournament_name"
        android:layout_marginBottom="26dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/statistics"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:id="@+id/tv_date"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="01.01.2020"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="96dp"
        android:layout_below="@id/ll_stat_date">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/sector"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/count"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/weigh"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/avr"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/weigh"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/sum"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>