<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterTeamListFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/dark_gradient" />

    <View
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/light_gradient" />

    <TextView
        android:id="@+id/tv_tournament_name"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginStart="@dimen/se_margin"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/se_margin"
        android:layout_marginBottom="34dp"
        android:background="@drawable/button_bottom_gradient"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/tournament"
        android:textAlignment="center"
        android:textAppearance="@style/Roboto.MatchName" />

    <RelativeLayout
        android:id="@+id/register_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tournament_name"
        android:layout_marginStart="@dimen/se_margin"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/icon_weigh"
            android:layout_width="42dp"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="32dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/weight_icon" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toEndOf="@id/icon_weigh"
            android:text="@string/weighing"
            android:textAppearance="@style/Roboto"
            android:textSize="26sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_table_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_team"
        android:layout_marginStart="@dimen/se_margin"
        android:layout_marginEnd="@dimen/se_margin"
        android:layout_marginBottom="29dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/sector"
            android:textAppearance="@style/Roboto"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:text="@string/teams"
            android:textAlignment="center"
            android:textAppearance="@style/Roboto"
            android:textSize="26sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_sectors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_end_weighting"
        android:layout_below="@id/rl_table_name"
        android:layout_marginStart="@dimen/se_margin"
        android:layout_marginEnd="@dimen/se_margin"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp" />


    <RelativeLayout
        android:id="@+id/button_end_weighting"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/se_margin"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/se_margin"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_dark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="64dp"
            android:text="@string/end_weighting"
            android:textSize="30sp"
            android:textAppearance="@style/Roboto"/>

    </RelativeLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="visible"
        android:layout_centerInParent="true"
        style="?android:attr/progressBarStyleLarge"/>

</RelativeLayout>