<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WeightingSelectedTeamFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_62sdp"
        android:layout_alignParentTop="true"
        android:background="@drawable/dark_gradient" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_28sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/light_gradient" />

    <TextView
        android:id="@+id/tv_tournament_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/se_margin"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/se_margin"
        android:layout_marginBottom="@dimen/_13sdp"
        android:background="@drawable/button_bottom_gradient"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/tournament"
        android:textAlignment="center"
        android:textAppearance="@style/Roboto.MatchName"
        />

    <RelativeLayout
        android:id="@+id/weighting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tournament_name"
        android:layout_marginStart="@dimen/se_margin"
        android:layout_marginBottom="@dimen/_12sdp">

        <ImageView
            android:id="@+id/icon_weigh"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_17sdp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_12sdp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/weight_icon" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toEndOf="@id/icon_weigh"
            android:text="@string/weighting_stages"
            android:textAppearance="@style/Roboto"
            android:textSize="@dimen/_10ssp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_table_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/weighting"
        android:layout_marginStart="@dimen/se_margin"
        android:layout_marginEnd="@dimen/se_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="2"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/stage"
            android:textAlignment="textStart"
            android:textAppearance="@style/Roboto"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/_24sdp"
            android:layout_weight="3"
            android:text="@string/status"
            android:textAlignment="center"
            android:textAppearance="@style/Roboto"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_stages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_table_name"
        android:layout_marginStart="@dimen/se_margin"
        android:layout_marginEnd="@dimen/se_margin"
        android:divider="@android:color/transparent"
        android:dividerHeight="@dimen/_4ssp" />

</RelativeLayout>